fix: post-thumbnain mt spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9284,7 +9284,7 @@ button.testimonial-arrow-btn:hover i {
   position: relative;
   overflow: hidden;
   border-radius: 20px;
-  margin-top: 32px;
+  margin-bottom: 32px;
 }
 .single-post-item .post-thumbnail a,
 .single-post-item .post-video a {
