--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -540,7 +540,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 20px;
-    margin-top: 32px;
+    margin-bottom: 32px;
 
     a {
       border-radius: 20px;
